--- a/sass/blocks/_modal.sass
+++ b/sass/blocks/_modal.sass
@@ -16,6 +16,10 @@
   z-index: 5
   transition: 0.3s
   transform: translate(-50%, -170%)
+
+  .auction1-card-button__wrapper
+    margin-bottom: 10px
+
   &_without_padding
     padding: 0
   &_with_bg
@@ -61,6 +65,8 @@
     line-height: 25px
     margin-top: 10px
     margin-bottom: 25px
+    &_big_margin
+      margin-top: 20px
 
   &-checkbox
     &s
