--- a/sass/blocks/_modal.sass
+++ b/sass/blocks/_modal.sass
@@ -19,6 +19,8 @@
 
   .auction1-card-button__wrapper
     margin-bottom: 10px
+  .partners-policy-container
+    padding: 15px 45px 26px
 
   &_without_padding
     padding: 0
