Изменения в аукцион 2 и стили чекбоксов

--- a/sass/blocks/_auction1.sass
+++ b/sass/blocks/_auction1.sass
@@ -15,7 +15,7 @@
     &-card
         position: relative
         display: flex
-        align-items: center
+        align-items: flex-start
         justify-content: flex-start
         padding-bottom: 60px
         &:after
