--- a/sass/blocks/_partners.sass
+++ b/sass/blocks/_partners.sass
@@ -83,12 +83,13 @@
         padding-right: 60px
         display: flex
         flex-direction: column
-        align-items: center
+        align-items: flex-start
         &__title
             font-size: 14px
             font-weight: 500
             line-height: 22px
             margin-bottom: 20px
+            text-align: center
     &-label
         font-size: 14px
         line-height: 40px
