--- a/sass/blocks/_modal.sass
+++ b/sass/blocks/_modal.sass
@@ -69,6 +69,8 @@
     margin-bottom: 25px
     &_big_margin
       margin-top: 20px
+    &_small_margin
+      margin-top: 0
 
   &-checkbox
     &s
@@ -133,6 +135,8 @@
     margin-bottom: 25px
     &_gray
       background: #81909F
+    &_balance
+      margin: 25px 0 0
 
   &_rate
     display: flex
