--- a/css/style.css
+++ b/css/style.css
@@ -3764,6 +3764,21 @@ template {
 .modal .lots-card__price {
   padding: 10px 0;
 }
+.modal-status p {
+  font-size: 14px;
+  line-height: 25px;
+  font-weight: 700;
+  margin: 0 0 25px;
+  text-align: center;
+}
+.modal-status-item {
+  display: flex;
+  align-items: center;
+  padding: 10px 0;
+}
+.modal-status-item img {
+  margin-right: 18px;
+}
 
 @media (min-width: 320px) and (max-width: 768px) {
   .modal {
