--- a/sass/blocks/_modal.sass
+++ b/sass/blocks/_modal.sass
@@ -174,6 +174,20 @@
   .lots-card__price
     padding: 10px 0
 
+  &-status
+    p
+      font-size: 14px
+      line-height: 25px
+      font-weight: 700
+      margin: 0 0 25px
+      text-align: center
+    &-item
+      display: flex
+      align-items: center
+      padding: 10px 0
+      img
+        margin-right: 18px
+
 @media (min-width: 320px) and (max-width: 768px)
   .modal
     max-width: 320px
