--- a/css/style.css
+++ b/css/style.css
@@ -3779,6 +3779,30 @@ template {
 .modal-status-item img {
   margin-right: 18px;
 }
+.modal-pay-method {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+}
+.modal-pay-method p {
+  font-size: 14px;
+  line-height: 25px;
+  margin: 10px 0 15px;
+}
+.modal-pay-method p.modal-pay-method-price {
+  font-size: 20px;
+  line-height: 20px;
+  color: #81909F;
+  margin: 0 0 35px;
+}
+.modal-pay-method .modal-button {
+  margin: 0;
+}
+.modal-pay-method .modal-button + .modal-button {
+  margin-top: 18px;
+}
 
 @media (min-width: 320px) and (max-width: 768px) {
   .modal {
