--- a/sass/blocks/_modal.sass
+++ b/sass/blocks/_modal.sass
@@ -19,16 +19,20 @@
 
   .auction1-card-button__wrapper
     margin-bottom: 10px
+
   .partners-policy-container
     padding: 15px 45px 26px
 
   &_without_padding
     padding: 0
+
   &_with_bg
     background: #F7F9FC
+
   &_small
     padding: 20px 50px 30px
     background: #F7F9FC
+
     & + .modal_small
       margin-top: 20px
 
@@ -38,10 +42,11 @@
       color: #34495E
       margin: 0 0 20px
       font-weight: 700
+
     &_text
-        font-size: 14px
-        line-height: 25px
-        margin: 0
+      font-size: 14px
+      line-height: 25px
+      margin: 0
 
   &_active
     transition: 0.3s
@@ -67,8 +72,10 @@
     line-height: 25px
     margin-top: 10px
     margin-bottom: 25px
+
     &_big_margin
       margin-top: 20px
+
     &_small_margin
       margin-top: 0
 
@@ -133,8 +140,10 @@
     box-shadow: 0px 5px 30px rgba(0, 0, 0, 0.2)
     border-radius: 5px
     margin-bottom: 25px
+
     &_gray
       background: #81909F
+
     &_balance
       margin: 25px 0 0
 
@@ -144,9 +153,11 @@
     justify-content: space-between
     width: 100%
     margin-bottom: 10px
+
     .modal-button
       width: 86px
       margin: 0
+
     &_text
       width: 50%
       text-align: center
@@ -166,11 +177,14 @@
     font-size: 14px
     color: $main
     text-decoration: underline
+
   &_delimeter
     border-top: 1px solid #E5E5E5
     width: 100%
+
   .img-icon
     margin-left: 10px
+
   .lots-card__price
     padding: 10px 0
 
@@ -181,12 +195,36 @@
       font-weight: 700
       margin: 0 0 25px
       text-align: center
+
     &-item
       display: flex
       align-items: center
       padding: 10px 0
+
       img
         margin-right: 18px
+
+  &-pay-method
+    display: flex
+    flex-direction: column
+    align-items: center
+    justify-content: center
+    width: 100%
+
+    p
+      font-size: 14px
+      line-height: 25px
+      margin: 10px 0 15px
+
+      &.modal-pay-method-price
+        font-size: 20px
+        line-height: 20px
+        color: #81909F
+        margin: 0 0 35px
+    .modal-button
+      margin: 0
+      & + .modal-button
+        margin-top: 18px
 
 @media (min-width: 320px) and (max-width: 768px)
   .modal
