fix to font weight

--- a/css/style.css
+++ b/css/style.css
@@ -3790,6 +3790,7 @@ template {
   font-size: 14px;
   line-height: 25px;
   margin: 10px 0 15px;
+  font-weight: 500;
 }
 .modal-pay-method p.modal-pay-method-price {
   font-size: 20px;
