--- a/sass/blocks/_modal.sass
+++ b/sass/blocks/_modal.sass
@@ -215,6 +215,7 @@
       font-size: 14px
       line-height: 25px
       margin: 10px 0 15px
+      font-weight: 500
 
       &.modal-pay-method-price
         font-size: 20px
