--- a/sass/blocks/_auction1.sass
+++ b/sass/blocks/_auction1.sass
@@ -1,5 +1,5 @@
 .auction1
-    padding-top: 40px
+    padding-top: 30px
     &-wrapper
         width: 83%
         display: flex
@@ -10,8 +10,8 @@
     &-title
         font-size: 16px
         font-weight: bold
-        margin-bottom: 25px
-        margin-top: 40px
+        margin-bottom: 35px
+        //margin-top: 40px
     &-card
         position: relative
         display: flex
@@ -46,6 +46,11 @@
         &-block
             display: flex
             flex-wrap: wrap
+            .win-disclaimer
+                margin-top: 20px
+                margin-bottom: 0
+            .win-disclaimer__text
+                font-size: 16px
         &-item
             width: 50%
             display: flex
@@ -101,7 +106,9 @@
                 font-weight: bold
     &-service   
         width: 100%
-        padding-top: 20px
+        padding-top: 15px
+        &-links
+            margin-bottom: 5px
         &-bookmark
             display: inline-block
             font-size: 14px
@@ -131,7 +138,7 @@
             padding-right: 50px
             padding-top: 15px
             padding-bottom: 25px
-            margin-bottom: 15px
+            margin-bottom: 10px
         &-main
             display: flex
             align-items: center
