--- a/sass/blocks/_auction2.sass
+++ b/sass/blocks/_auction2.sass
@@ -1,4 +1,6 @@
 .auction2
+    &-title
+        margin-top: 45px
     &-card
         &-button
             background: #F7F9FC
@@ -13,7 +15,7 @@
         line-height: 25px
         color: $main
         text-decoration: underline
-        margin-top: 15px
+        margin-top: 0px
         margin-bottom: 30px
     &-text
         display: block
