--- a/sass/blocks/_subscribe.sass
+++ b/sass/blocks/_subscribe.sass
@@ -82,11 +82,11 @@
         &-warning
             display: flex
             align-items: center
-            margin-top: 25px
+            margin-top: 15px
         &-rep
             display: flex
             flex-direction: column
-            align-items: center
+            align-items: flex-end
         &-main
             display: flex
             flex-direction: column
