--- a/sass/blocks/_lots.sass
+++ b/sass/blocks/_lots.sass
@@ -8,7 +8,7 @@
         font-size: 16px
         font-weight: bold
         margin-top: 0
-        margin-bottom: 30px
+        margin-bottom: 40px
     &-filter
         .reg-item
             margin: 0
@@ -30,7 +30,7 @@
         display: flex
         justify-content: center
         align-items: center
-        margin-bottom: 35px
+        margin-bottom: 15px
         &__warning
             color: $main
             width: 22px
@@ -51,8 +51,8 @@
         align-items: center
         justify-content: space-between
         margin-top: 15px
-        margin-bottom: 30px
-        padding-top: 20px
+        margin-bottom: 35px
+        padding-top: 15px
         &:after
             content: ''
             position: absolute
@@ -136,6 +136,7 @@
             min-width: 150px
             min-height: 150px
             margin-right: 45px
+            overflow: hidden
             &-noPhoto
                 flex-direction: column
                 align-items: center
@@ -163,12 +164,14 @@
             flex-direction: column
             align-items: flex-end
             margin-top: 25px
+            .lots-card__value + .lots-card__value
+                margin-top: 15px
         &__value
             width: 290px
             display: flex
             align-items: center
             justify-content: space-between
-            margin-bottom: 10px
+            margin-bottom: 0px
             &-text
                 font-size: 14px
                 font-weight: normal
