--- a/sass/blocks/_slider.sass
+++ b/sass/blocks/_slider.sass
@@ -8,7 +8,7 @@
     &-slide
         position: relative
         display: flex!important
-        align-items: center
+        //align-items: center
         &__image
             height: 282px
             background: url('../img/slider/bg.png') no-repeat center center
@@ -22,6 +22,9 @@
             font-weight: bold
             line-height: 40px
             max-width: 255px
+            margin-bottom: 35px
+        &__subtitle
+            font-size: 20px
     &-button
         display: block
         max-width: 295px
@@ -31,8 +34,8 @@
         font-weight: 500
         color: #ffffff
         background: $main
-        padding-top: 15px
-        padding-bottom: 15px
+        padding-top: 21px
+        padding-bottom: 21px
         box-shadow: 0px 5px 30px rgba(0, 0, 0, 0.2)
         border-radius: 10px
         margin-left: auto
