--- a/sass/blocks/_win.sass
+++ b/sass/blocks/_win.sass
@@ -1,6 +1,8 @@
 .win
     padding-top: 45px
     padding-bottom: 35px
+    .card-item
+        margin-bottom: 20px
     &-wrapper
         display: flex
         flex-direction: column
@@ -9,7 +11,7 @@
         font-size: 16px
         font-weight: bold
         margin-top: 15px
-        margin-bottom: 70px
+        margin-bottom: 60px
         & br
             display: none
     &-block
@@ -75,8 +77,8 @@
         display: flex
         align-items: center
         justify-content: space-between
-        margin-top: 35px
-        margin-bottom: 45px
+        margin-top: 15px
+        margin-bottom: 50px
         &__warning
             color: $main    
             width: 22px
