--- a/css/style.css
+++ b/css/style.css
@@ -2429,6 +2429,7 @@ template {
   height: 240px;
   border-radius: 5px;
   margin-right: 80px;
+  overflow: hidden;
 }
 .win-description {
   display: flex;
