--- a/sass/blocks/_win.sass
+++ b/sass/blocks/_win.sass
@@ -25,6 +25,7 @@
             height: 240px
             border-radius: 5px
             margin-right: 80px
+            overflow: hidden
     &-description
         display: flex
         flex-direction: column
