new logo and styles

--- a/sass/blocks/_reg.sass
+++ b/sass/blocks/_reg.sass
@@ -108,7 +108,12 @@
         font-size: 12px
         margin-top: 25px
 
+.trigger-wrapper
+    width: calc(33.33% - 20px)
+
 @media (min-width: 320px) and (max-width: 768px)
+    .trigger-wrapper
+        width: 100%
     .reg
         padding-top: 0
         padding-bottom: 25px
