--- a/css/style.css
+++ b/css/style.css
@@ -3148,7 +3148,15 @@ template {
   margin-top: 25px;
 }
 
+.trigger-wrapper {
+  width: calc(33.33% - 20px);
+}
+
 @media (min-width: 320px) and (max-width: 768px) {
+  .trigger-wrapper {
+    width: 100%;
+  }
+
   .reg {
     padding-top: 0;
     padding-bottom: 25px;
