--- a/css/style.css
+++ b/css/style.css
@@ -1285,6 +1285,7 @@ template {
   font-size: 16px;
   font-weight: bold;
   margin-bottom: 35px;
+  margin-top: 40px;
 }
 .auction1-card {
   position: relative;
