--- a/sass/blocks/_auction1.sass
+++ b/sass/blocks/_auction1.sass
@@ -11,7 +11,7 @@
         font-size: 16px
         font-weight: bold
         margin-bottom: 35px
-        //margin-top: 40px
+        margin-top: 40px
     &-card
         position: relative
         display: flex
