--- a/sass/blocks/_slider.sass
+++ b/sass/blocks/_slider.sass
@@ -1,5 +1,15 @@
 .slider
-    padding-top: 100px
+    padding-top: 110px
+    .slick-arrow
+        width: 16px
+        height: 33px
+        object-fit: cover
+        &:before
+            display: none
+    .slick-prev
+        left: 0
+    .slick-next
+        right: 0
     &-container
         position: relative
         display: flex
