--- a/sass/_interface.sass
+++ b/sass/_interface.sass
@@ -20,6 +20,11 @@ body
     background: #ffffff
     color: $text
 
+#root
+    min-height: 100vh
+    position: relative
+    padding-bottom: 93px
+
 img
     max-width: 100%
     max-height: 100%
