--- a/sass/blocks/_about.sass
+++ b/sass/blocks/_about.sass
@@ -1,6 +1,6 @@
 .about
     padding-top: 40px
-    padding-bottom: 60px
+    padding-bottom: 10px
     &-wrapper
         display: flex
         flex-direction: column
@@ -9,18 +9,24 @@
         font-size: 16px
         font-weight: bold
         margin-top: 0
-        margin-bottom: 25px
+        margin-bottom: 0
+        //margin-bottom: 25px
     &-image
         display: flex
         align-items: center
         justify-content: center
         margin-top: 20px
         margin-bottom: 40px
+        &:nth-of-type(2)
+            margin-bottom: 20px
+        &:nth-of-type(3)
+            margin-top: 0px
+            margin-bottom: 20px
     &-target
         font-size: 30px
         font-weight: bold
         margin-top: 0
-        margin-bottom: 25px
+        margin-bottom: 20px
     &-text
         font-size: 14px
         line-height: 22px
