--- a/sass/blocks/_feedback.sass
+++ b/sass/blocks/_feedback.sass
@@ -5,6 +5,16 @@
         display: flex
         flex-direction: column
         align-items: center
+        .slick-arrow
+            width: 16px
+            height: 33px
+            object-fit: cover
+            &:before
+                display: none
+        .slick-prev
+            left: 0
+        .slick-next
+            right: 0
     &-title
         font-size: 16px
         font-weight: bold
@@ -32,21 +42,24 @@
         height: 120px
         border-radius: 50%
         margin-right: 70px
+        display: flex
+        align-items: center
+        justify-content: center
         & img
             border-radius: 50%
     &-name
-        font-size: 22px
+        font-size: 16px
         line-height: 22px
         font-weight: bold
-        margin-bottom: 10px
+        margin-bottom: 5px
     &-city
-        font-size: 14px
+        font-size: 12px
     &-text
         font-size: 20px
         line-height: 22px
         text-align: justify
         font-weight: 300
-        margin-top: 15px
+        margin-top: 25px
         margin-bottom: 30px
     &-main
         max-width: 480px
@@ -63,7 +76,7 @@
     &-item
         display: flex
         align-items: flex-start
-        margin-right: 20px
+        margin-right: 80px
         min-width: 190px
         &:last-child
             margin-right: 0
