--- a/sass/blocks/_footer.sass
+++ b/sass/blocks/_footer.sass
@@ -1,4 +1,7 @@
 .footer
+    position: absolute
+    bottom: 0
+    width: 100%
     &-wrapper
         padding-top: 40px
         padding-bottom: 40px
