--- a/sass/blocks/_lots.sass
+++ b/sass/blocks/_lots.sass
@@ -30,7 +30,7 @@
         display: flex
         justify-content: center
         align-items: center
-        margin-bottom: 15px
+        margin-bottom: 10px
         &__warning
             color: $main
             width: 22px
@@ -51,8 +51,8 @@
         align-items: center
         justify-content: space-between
         margin-top: 15px
-        margin-bottom: 35px
-        padding-top: 15px
+        margin-bottom: 40px
+        padding-top: 20px
         &:after
             content: ''
             position: absolute
@@ -89,11 +89,12 @@
                 display: block
         &-my
             display: none
+            padding-top: 0
             &_active
                 display: block
     &-about
         display: flex
-        align-items: flex-start 
+        align-items: flex-start
         padding-left: 50px
         padding-right: 80px
     &-card
@@ -101,6 +102,8 @@
         border-radius: 5px
         padding-bottom: 20px
         margin-bottom: 20px
+        .lots-item
+            flex-basis: 25%
         &_active
             border: 1px solid $main
         &_inActive
@@ -121,7 +124,7 @@
             padding-left: 50px
             display: flex
             align-items: center
-            margin-bottom: 20px
+            margin-bottom: 15px
             &_active
                 background: $main
                 color: #fff
@@ -177,7 +180,7 @@
                 font-weight: normal
             &-bid
                 &_loose
-                    color: #CD3F36 
+                    color: #CD3F36
         &__price
             display: flex
             align-items: center
@@ -202,9 +205,11 @@
             padding-top: 15px
             padding-bottom: 15px
             width: 100%
+            min-width: 290px
     &-item
-        margin-bottom: 15px
+        margin-bottom: 10px
         margin-right: 70px
+
         &:nth-child(3n)
             margin-right: 0
         &-options
@@ -217,6 +222,8 @@
     .lots
         padding-top: 0
         &-card
+            .lots-item
+                flex-basis: 100%
             &__description
                 position: relative
                 width: 100%
