--- a/sass/blocks/_modal.sass
+++ b/sass/blocks/_modal.sass
@@ -70,7 +70,7 @@
     text-align: center
     font-size: 14px
     line-height: 25px
-    margin-top: 10px
+    margin-top: 20px
     margin-bottom: 25px
 
     &_big_margin
@@ -157,6 +157,7 @@
     .modal-button
       width: 86px
       margin: 0
+      padding: 5px 0
 
     &_text
       width: 50%
