--- a/sass/blocks/_partners.sass
+++ b/sass/blocks/_partners.sass
@@ -1,6 +1,6 @@
 .partners
     padding-top: 40px
-    padding-bottom: 60px
+    padding-bottom: 25px
     &-wrapper
         display: flex
         flex-direction: column
@@ -12,7 +12,7 @@
     &-title
         font-size: 16px
         font-weight: bold
-        margin-bottom: 30px
+        margin-bottom: 20px
         margin-top: 0
     &-link
         position: relative
@@ -74,6 +74,9 @@
         display: flex
         flex-direction: column
         align-items: center
+        .reg-policy
+            margin-top: 15px
+            margin-bottom: 15px
     &-options
         background: #F7F9FC
         border-radius: 5px  
