--- a/sass/blocks/_slider.sass
+++ b/sass/blocks/_slider.sass
@@ -94,6 +94,8 @@
 @media (max-width: 768px) and (min-width: 320px)
     .slider
         padding-top: 37px
+        .slick-dots
+            bottom: -5px
         &-container
             padding-bottom: 30px
         &-slide
