--- a/css/style.css
+++ b/css/style.css
@@ -923,6 +923,7 @@ template {
     left: 0;
     top: 0;
     transform: translate(0, 0);
+    width: 155px;
   }
   .header-logo__text {
     font-size: 14px;
@@ -1137,6 +1138,9 @@ template {
 @media (max-width: 768px) and (min-width: 320px) {
   .slider {
     padding-top: 37px;
+  }
+  .slider .slick-dots {
+    bottom: -5px;
   }
   .slider-container {
     padding-bottom: 30px;
@@ -2283,6 +2287,15 @@ template {
   .lots {
     padding-top: 0;
   }
+  .lots-links {
+    justify-content: center;
+  }
+  .lots-links__link {
+    font-size: 12px;
+  }
+  .lots-links__link:last-child {
+    margin-right: 0;
+  }
   .lots-card .lots-item {
     flex-basis: 100%;
   }
@@ -2323,6 +2336,7 @@ template {
   .lots-options {
     padding-top: 0;
     flex-wrap: wrap;
+    flex-direction: column;
   }
   .lots-options:after {
     width: 0;
@@ -2334,9 +2348,10 @@ template {
     padding-left: 15px;
     justify-content: space-between;
     margin-bottom: 0;
+    align-items: flex-start;
   }
   .lots-verification__text {
-    width: 245px;
+    width: calc(100% - 22px);
     text-align: justify;
     font-size: 12px;
     line-height: 20px;
@@ -3357,6 +3372,9 @@ template {
   .feedback {
     padding-top: 0;
   }
+  .feedback .slick-dots {
+    bottom: -35px;
+  }
   .feedback-title {
     font-size: 16px;
     margin-top: 15px;
@@ -3403,8 +3421,12 @@ template {
     align-items: center;
     margin-right: 0;
   }
+  .feedback-item-text {
+    align-items: center;
+  }
   .feedback-item__image {
     margin-right: 0;
+    margin-bottom: 15px;
   }
   .feedback-description {
     width: 100%;
