--- a/sass/blocks/_feedback.sass
+++ b/sass/blocks/_feedback.sass
@@ -108,6 +108,8 @@
 @media (min-width: 320px) and (max-width: 768px)
     .feedback
         padding-top: 0
+        .slick-dots
+            bottom: -35px
         &-title
             font-size: 16px
             margin-top: 15px
@@ -144,8 +146,11 @@
             flex-direction: column
             align-items: center
             margin-right: 0
+            &-text
+                align-items: center
             &__image
                 margin-right: 0
+                margin-bottom: 15px
         &-description
             width: 100%
             justify-content: space-around
