--- a/sass/blocks/_header.sass
+++ b/sass/blocks/_header.sass
@@ -346,6 +346,7 @@
             left: 0
             top: 0
             transform: translate(0, 0)
+            width: 155px
             &__text
                 font-size: 14px
                 margin-left: 10px
