--- a/sass/blocks/_subscribe.sass
+++ b/sass/blocks/_subscribe.sass
@@ -266,6 +266,24 @@
                 margin-bottom: 35px
             &-description
                 flex-basis: 100%
+            &-balance
+                display: flex
+                white-space: nowrap
+            &-name
+                width: calc(100% - 140px)
+            &__org
+                margin-bottom: 5px
+            &-rep
+                align-items: center
+                margin-top: 35px
+                padding-top: 35px
+                border-top: 1px solid #E5E5E5
+                width: 100%
+            &__value
+                margin-top: 0
+            &-current
+                flex-direction: column
+                align-items: center
         &-tariff
             &-block
                 flex-wrap: wrap
