--- a/sass/_interface.sass
+++ b/sass/_interface.sass
@@ -19,11 +19,12 @@ a
 body
     background: #ffffff
     color: $text
-
-#root
     min-height: 100vh
     position: relative
     padding-bottom: 93px
+    @media (max-width: 768px)
+        padding-bottom: 168px
+
 
 img
     max-width: 100%
