--- a/sass/_interface.sass
+++ b/sass/_interface.sass
@@ -48,3 +48,5 @@ ol li:before
     counter-increment: li
     content: counters(li,".") " "
     font-weight: bold
+input, select, textarea
+    box-shadow: none
