--- a/sass/style.sass
+++ b/sass/style.sass
@@ -3,6 +3,7 @@
 @import '_fonts'
 @import '_interface'
 @import '_normalize.scss'
+@import "../css/animate.css"
 
 @import 'blocks/_checkbox'
 @import 'blocks/_select'
