--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+@import "../css/animate.css";
 @media (min-width: 992px) {
   button:hover {
     cursor: pointer;
@@ -62,6 +63,10 @@ ol li:before {
   counter-increment: li;
   content: counters(li, ".") " ";
   font-weight: bold;
+}
+
+input, select, textarea {
+  box-shadow: none;
 }
 
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
@@ -2284,6 +2289,76 @@ template {
 .lots-item__image {
   margin-right: 10px;
 }
+.lots__widget {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  display: flex;
+  background: #fff;
+  z-index: 100;
+  transition-duration: 0.5s;
+}
+.lots__widget.dark {
+  background: #34495E;
+  color: #fff;
+}
+.lots__widget.-novisible {
+  transform: translate(-100%, 0);
+}
+.lots__widget.-visible {
+  transform: translate(0, 0);
+}
+.lots__widget__load {
+  position: absolute;
+}
+.lots__widget__link {
+  width: 61px;
+  height: 66px;
+  background: #51C569;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.lots__widget__name {
+  font-size: 12px;
+}
+.lots__widget__character {
+  font-size: 12px;
+  display: flex;
+  margin-top: 10px;
+}
+.lots__widget__character__item {
+  display: flex;
+  align-items: center;
+  margin-right: 20px;
+  font-weight: 700;
+}
+.lots__widget__character__item img {
+  margin-right: 5px;
+}
+.lots__widget__load {
+  position: absolute;
+  background: #51C569;
+  height: 3px;
+  bottom: 0;
+  left: 0;
+}
+.lots__widget__info {
+  width: calc(100% - 61px);
+  display: flex;
+  align-items: center;
+  position: relative;
+  justify-content: space-between;
+}
+.lots__widget__info__left {
+  padding-left: 28px;
+}
+.lots__widget__info__time {
+  font-weight: 500;
+  font-size: 20px;
+  padding: 0 12px;
+}
 
 @media (min-width: 320px) and (max-width: 768px) {
   .lots {
@@ -2304,6 +2379,9 @@ template {
   .lots-card__description {
     position: relative;
     width: 100%;
+  }
+  .lots-card__title {
+    padding-left: 12px;
   }
   .lots-card__image {
     position: absolute;
