--- a/sass/blocks/_subscribe.sass
+++ b/sass/blocks/_subscribe.sass
@@ -265,6 +265,7 @@
             flex-wrap: wrap
             &-main
                 margin-bottom: 35px
+                width: 100%
             &-description
                 flex-basis: 100%
             &-balance
