--- a/sass/blocks/_lots.sass
+++ b/sass/blocks/_lots.sass
@@ -222,10 +222,12 @@
         bottom: 0
         left: 0
         width: 100%
-        display: flex
+        display: none
         background: #fff
         z-index: 100
         transition-duration: 0.5s
+        @media (max-width: 768px)
+            display: flex
         &.dark
             background: #34495E
             color: #fff
