--- a/sass/blocks/_auction1.sass
+++ b/sass/blocks/_auction1.sass
@@ -115,6 +115,8 @@
             line-height: 40px
             margin-right: 50px
             margin-bottom: 22px
+            @media (max-width: 320px)
+                font-size: 12px
             &_active
                 font-weight: 500    
                 position: relative
