--- a/sass/blocks/_card.sass
+++ b/sass/blocks/_card.sass
@@ -38,6 +38,11 @@
                 font-weight: bold
         &-options
             margin-right: 0
+
+@media (max-width: 320px)
+    .card
+        &-main
+            padding-left: 105px
         
 @media (min-width: 320px) and (max-width: 768px)
     .card
@@ -46,6 +51,7 @@
             flex-direction: column
             padding-left: 160px
             padding-bottom: 25px
+
             &-options
                 flex-direction: row
                 flex-wrap: wrap
