--- a/sass/blocks/_modal.sass
+++ b/sass/blocks/_modal.sass
@@ -240,3 +240,9 @@
     &-checkbox
       &:first-child
         transform: translateX(32px)
+
+.popup-content
+  .partners
+    @media (max-width: 768px) and (min-width: 320px)
+      padding-top: 20px
+      padding-bottom: 20px
