--- a/sass/_interface.sass
+++ b/sass/_interface.sass
@@ -21,9 +21,9 @@ body
     color: $text
     min-height: 100vh
     position: relative
-    padding-bottom: 93px
+    padding-bottom: 93px!important
     @media (max-width: 768px)
-        padding-bottom: 168px
+        padding-bottom: 168px!important
 
 
 img
