--- a/sass/blocks/_lots.sass
+++ b/sass/blocks/_lots.sass
@@ -226,6 +226,24 @@
         background: #fff
         z-index: 100
         transition-duration: 0.5s
+        &.lots__top
+            top: 100px
+            bottom: unset
+            background: transparent
+            &.-novisible
+                transform: translate(200%, 0)
+            .lots__widget__container
+                justify-content: flex-end
+            .lots__top__container
+                max-width: 375px
+                display: flex
+                box-shadow: 0px 5px 30px rgba(0, 0, 0, 0.1)
+                padding-right: 28px
+            .lots__widget__info__left
+                display: block
+                .lots__widget__character
+                    margin-left: 0
+                    margin-top: 10px
         &.dark
             background: #34495E
             color: #fff
@@ -236,7 +254,7 @@
         &__load
             position: absolute
         &__link
-            width: 61px
+            width: 66px
             height: 66px
             background: #51C569
             display: flex
