--- a/css/style.css
+++ b/css/style.css
@@ -2326,6 +2326,7 @@ template {
   display: flex;
   box-shadow: 0px 5px 30px rgba(0, 0, 0, 0.1);
   padding-right: 28px;
+  background: #fff;
 }
 .lots__widget.lots__top .lots__widget__info__left {
   display: block;
