--- a/sass/blocks/_lots.sass
+++ b/sass/blocks/_lots.sass
@@ -239,6 +239,7 @@
                 display: flex
                 box-shadow: 0px 5px 30px rgba(0, 0, 0, 0.1)
                 padding-right: 28px
+                background: #fff
             .lots__widget__info__left
                 display: block
                 .lots__widget__character
