--- a/css/style.css
+++ b/css/style.css
@@ -2321,12 +2321,20 @@ template {
 .lots__widget.lots__top .lots__widget__container {
   justify-content: flex-end;
 }
+.lots__widget.lots__top .lots__widget__info {
+  height: 66px;
+}
 .lots__widget.lots__top .lots__top__container {
-  max-width: 375px;
+  width: 375px;
   display: flex;
   box-shadow: 0px 5px 30px rgba(0, 0, 0, 0.1);
   padding-right: 28px;
   background: #fff;
+}
+@media (max-width: 400px) {
+  .lots__widget.lots__top .lots__top__container {
+    width: 100%;
+  }
 }
 .lots__widget.lots__top .lots__widget__info__left {
   display: block;
