--- a/sass/blocks/_lots.sass
+++ b/sass/blocks/_lots.sass
@@ -234,12 +234,16 @@
                 transform: translate(200%, 0)
             .lots__widget__container
                 justify-content: flex-end
+            .lots__widget__info
+                height: 66px
             .lots__top__container
-                max-width: 375px
+                width: 375px
                 display: flex
                 box-shadow: 0px 5px 30px rgba(0, 0, 0, 0.1)
                 padding-right: 28px
                 background: #fff
+                @media (max-width: 400px)
+                    width: 100%
             .lots__widget__info__left
                 display: block
                 .lots__widget__character
